# backend-core

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  tasks.py  test.py
.github/: codeql-config.yml
.github/workflows/: cd.yml  ci.yml  main.yml  release.yml  test.yml
.github/workflows/codeql/: codeql-config.yml
alembic/: env.py
alembic/versions/: 0ad73c66d69c_create_users_table.py  57ed3b8a2478_add_first_and_last_name_to_users.py  acc2a672e03a_initial_migration.py
backend_core/: __init__.py  main.py
backend_core/api/: __init__.py
backend_core/api/v1/: api.py
backend_core/api/v1/endpoints/: auth.py  users.py
backend_core/core/: config.py  deps.py  security.py  settings.py
backend_core/db/: base.py  base_class.py  migrations.py  session.py  utils.py
backend_core/models/: __init__.py  user.py
backend_core/schemas/: __init__.py  token.py  user.py
scripts/: run_tests.sh  setup_init_files.py  verify_db.py
tasks_modules/: __init__.py  common.py  deploy.py  docker.py  format.py  lifecycle.py  lint.py  test.py
tests/: conftest.py  test_main.py
tests/api/v1/: test_auth.py  test_users.py
tests/core/: test_deps.py
tests/db/: test_session.py  test_utils.py
